Fixed color mode padding in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -294,12 +294,11 @@ body {
   height: 32px !important;
   pad: 0 80px;
 }
+/* Color mode toggle switch */
 .toggle_node_modules-\@docusaurus-theme-classic-lib-theme-ColorModeToggle-styles-module {
-  width: unset !important;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: unset !important;
 }
 .DocSearch-Button {
   background-color: #323c47 !important;
